# agentic_agile_v

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTIONS.md  CREATION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.md  Makefile  OPENHANDS_COMPLETE_IMPLEMENTATION.md  OPENHANDS_EXTENDED_TEST_REPORT.md  OPENHANDS_FINAL_IMPLEMENTATION_REPORT.md  OPENHANDS_INTEGRATION_SUMMARY.md  OPENHANDS_QUICKSTART.md  OPENHANDS_REMAINING_WORK.md  OPENHANDS_STATUS.md  OPENHANDS_TEST_REPORT.md  OPENHANDS_USER_GUIDE.md  PCB_IMPLEMENTATION_SUMMARY.md  PCB_REALITY_CHECK.md  PCB_TEST_RESULTS.md  PCB_WORKING_STATUS.md  PROJECT_COMPLETE.md  README.md  README_V2.2.md  TEST_RESULTS.md  WHATS_NEXT.md  agentic_control_matrix_implementation_plan.md  demo.sh  example_led_blinker.py  pyproject.toml  test_core.py  test_openhands_integration.py  test_pcb_manual.py
.agentic-agile-v/policies/: rules.yaml
.agentic-agile-v/schemas/: approval.schema.json  event.schema.json  evidence-bundle.schema.json  task-brief.schema.json
.agentic-agile-v/state/: events.jsonl  tasks.json
.agile-v/: visualization.html
.agile-v/impact/: affected_components.json  impact_map.md  regression_test_candidates.md
.agile-v/traceability/: graph_traceability_matrix.md  traceability_result.json
.agile-v/understanding/: knowledge_graph_hash.txt  normalized_graph.json  system_overview.md  understanding_gate_decision.md
.agile-v/wiki/: freshness.json  manifest.json  source_map.json  validation.json
.github/: PULL_REQUEST_TEMPLATE.md  agentic-ai-improvement-scan.md
.github/workflows/: agentic-agile-v-gates.yml  control-matrix.yml  openwiki-update.yml  openwiki-validate.yml  release.yml
.openhands/: hooks.json  setup.sh
.openhands/hooks/: block_unsafe_commands.sh  collect_firmware_evidence.sh  collect_session_metadata.sh  enforce_control_matrix.sh  enforce_hardware_firmware_contract.sh  enforce_task_brief.sh  generate_handoff_on_session_end.sh  log_tool_usage.sh  require_firmware_tests.sh  validate_control_evidence_on_stop.sh  validate_evidence_on_stop.sh  validate_firmware_scope.sh  validate_scope.sh
config/: agentic_agile_v.yml  control_matrix.yaml  openhands.yaml  pcb_risk_levels.yaml
config/embedded/: embedded_risk_levels.yaml
config/policies/: approval_policy.yaml  control_matrix_policy.yaml  evidence_policy.yaml  openhands_dangerous_commands.yaml  risk_level_policy.yaml  scope_policy.yaml
docs/: QUALITY_IMPROVEMENTS.md  adoption-checklist.md  agentic-agile-v.md  agentic-ai-improvement-workflow.md  bug-workflow.md  control-matrix.md  evidence-bundles.md  feature-workflow.md  hardware-firmware-workflow.md  pcb-development.md  risk-levels.md  testing-strategy.md  tooling-architecture.md  understand-anything-integration.md
docs/adr/: ADR-0001-openhands-execution-backend.md  ADR-0002-control-matrix.md  ADR-0002-embedded-systems-layer.md
docs/embedded/: embedded_systems_overview.md
docs/examples/: i2c_temperature_node.md
docs/integrations/: openhands.md  openwiki.md
examples/: demo_i2c_temp_node.py
examples/pcb/: component_index.json  led_blinker_circuit.json
openwiki/: ONBOARDING.md  co-verification.md
openwiki/domains/: software.md
schemas/: control_matrix.schema.json  evidence_bundle.schema.json  firmware_evidence_bundle.schema.json  firmware_software_contract.schema.json  graph_traceability.schema.json  hardware_firmware_contract.schema.json  impact_map.schema.json  openhands_session.schema.json  openhands_tool_event.schema.json  pcb_circuit_ir.schema.json  pcb_evidence_bundle.schema.json  system_contract.schema.json  system_graph.schema.json  task_brief.schema.json
scripts/: agent_setup.sh  new_task.py  prove_integration.py  risk_assessment.py  run_quality_gates.py  validate_evidence.py  validate_interface_contracts.py  validate_test_quality.py  validate_time_allocation.py
src/agilev/: __init__.py  cli.py  control_enforcer.py  control_matrix.py  state.py  task_context.py
templates/: agent_plan.md  bug_brief.md  evidence_bundle.json  feature_brief.md  hardware_firmware_brief.md  pcb_brief.md  pcb_design_plan.md  pcb_evidence_bundle.json  pcb_semantic_review.md  review_checklist.md  test_plan.md
templates/openwiki/: ARCHITECTURE.md  (+2 more)
tests/: demo_embedded.py  test_control_cli.py  test_control_enforcer.py  test_control_hooks.py  test_control_matrix_loader.py  test_e2e_workflow.py  test_embedded_integration.py  test_pcb.py  test_shell_hooks.py
(+129 files in other folders)
