[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agilev"
version = "0.1.0"
description = "Agentic Agile-V runtime: graph adapter, impact analysis, traceability, and evidence bundle generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Agile-V", email = "hello@agile-v.org" }
]
keywords = ["agile", "verification", "evidence", "traceability", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Optional: enables JSON Schema validation in `agilev controls validate`
validate = ["jsonschema>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "jsonschema>=4.0",
]

[project.scripts]
agilev = "agilev.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Ignore line length in specific cases where it's unavoidable
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow long lines in:
# - GitHub Actions workflow generation (embedded shell scripts)
# - CLI output formatting (table formatting)
# - Scaffolding (embedded shell scripts and JSON)
# - Reports (formatted markdown with long messages)
# - PCB modules (error messages with component names)
# - Validators (detailed error messages)
# - Evidence/scope (error messages)
"src/agilev/openhands/github_actions.py" = ["E501"]
"src/agilev/openhands/scaffold.py" = ["E501"]
"src/agilev/openhands/reports.py" = ["E501"]
"src/agilev/openhands/evidence_adapter.py" = ["E501"]
"src/agilev/openhands/scope.py" = ["E501"]
"src/agilev/cli.py" = ["E501"]
"src/agilev/pcb/circuit_ir.py" = ["E501"]
"src/agilev/pcb/cli.py" = ["E501"]
"src/agilev/pcb/validators.py" = ["E501"]
"src/agilev/graph/impact.py" = ["E501"]
"src/agilev/state.py" = ["E501"]
"src/agilev/task_context.py" = ["E501"]
"tests/test_pcb.py" = ["E501"]  # Pin constructors
"src/agilev/control_matrix.py" = ["E501"]
"src/agilev/control_enforcer.py" = ["E501"]
"src/agilev/openhands/control_hooks.py" = ["E501"]
"tests/test_control_cli.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
# Disable certain checks for newly added modules during initial integration
[[tool.mypy.overrides]]
module = [
    "agilev.pcb.*",
    "agilev.openhands.*",
    "agilev.control_matrix",
    "agilev.control_enforcer",
]
disable_error_code = [
    "assignment",
    "var-annotated",
    "attr-defined",
    "union-attr",
    "operator",
    "index",
]
